feat: POST /group with test containers (#15)
* docs: rename classes endpoint to groups in spec

* docs: rename Group schema to GroupOutput in spec

* feat: require ADMIN role for POST /groups

* test: register group init script in test env

* feat: add CreateGroupInput dto

* feat: add GroupOutput dto

* feat: add Group domain entity

* feat: add JGroup entity

* feat: add GroupRepository

* feat: add GroupMapper

* feat: add GroupService

* feat: add POST /groups endpoint

* feat: add group table migration

* test: add test group init script

* test: add PostGroupsIT
