# src/main/java/com/techindna/anerti/dto/CreateGroupInput.java
@@ -1,0 +1,5 @@
+package com.techindna.anerti.dto;
+
+import com.techindna.anerti.repository.enums.CourseType;
+
+public record CreateGroupInput(String ref, CourseType type) {}
